homelab-okd/platform/okd-config/console-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: console
  namespace: openshift-console
  labels:
    type: internal
